Ensure that the current working directory isn't changed from within Kile

Otherwise, projects that are to be opened and which are given as relative path
arguments to Kile cannot be opened correctly.

Also, remove the warning about running sessions which originates from Konsole.

BUG: 301808